--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     }
   ],
   "devDependencies": {
+    "grunt-cli": "~0.1.9",
+    "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-watch": "~0.5.0"
+  },
+  "scripts": {
+    "test": "grunt"
   }
 }
